# SimpleStockMarket

./: CMakeLists.txt  LICENSE  README  SimpleStockMarket - Shortcut.lnk  Test_Results.txt
include/: CommonDefs.h  IInstrument.h  IRefDataService.h  ITradeService.h  InstrumentRatios.h  InstrumentRefDataService.h  RefrenceDataMapping.h  StaticData.h  StockMarketActivity.h  TradeRecord.h  TradeService.h
src/: IInstrument.cpp  IRefDataService.cpp  ITradeService.cpp  InstrumentRatios.cpp  InstrumentRefDataService.cpp  ReferenceDataMapping.cpp  StockMarketActivity.cpp  TradeRecord.cpp  TradeService.cpp  main.cpp
